# hive

./: README.md  quickstart.ps1
.claude/skills/hive-create/: SKILL.md
core/: pyproject.toml  requirements.txt
core/framework/llm/: __init__.py  anthropic.py  litellm.py
core/framework/runner/: runner.py
core/tests/: test_litellm_provider.py
docs/: environment-setup.md
tools/src/aden_tools/credentials/: email.py
tools/src/aden_tools/tools/email_tool/: email_tool.py
tools/tests/tools/: test_email_tool.py
